Tue Mar 18 13:03:33 1997  Jim Meyering  <meyering@totoro.cyclic.com>

	* sanity.sh (RCSINIT): Define to be empty and export, to hide any
	existing value that might cause spurious failures.

	* Makefile.in: (install): Depend on installdirs.
	Remove `CYGNUS LOCAL' comment saying not to.

Tue Mar 18 09:36:26 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* recurse.c (struct recursion_frame): Reindent.
	(do_dir_proc): Print message if we try to recurse into a CVSADM
	directory.
	* sanity.sh (basicb): New test basicb-4a tests for above fix.

Sun Mar 16 10:18:28 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (death2): Replace regexp matching temporary file name
	with new variable ${tempname}.  For most of the tests this is a
	cosmetic change, but death2-diff-6 had been missing _ which caused
	it to fail on Solaris (at least sometimes).

	* sanity.sh (modes): Don't use export -n; it doesn't seem
	to be sufficiently portable.

	* version.c: Change version number to 1.9.5.

	* version.c: Version 1.9.4.

	* rcscmds.c (RCS_checkin): Preserve the mode of the rcsfile.
	RCS_CI usually, but not always, does this for us.
	* commit.c (fix_rcs_modes): Replace algorithm with a more
	CVSUMASK-friendly one.
	* sanity.sh (modes): Update tests modes-5, modes-7, modes-10, and
	modes-15 so they test that CVSUMASK is honored.

Sun Mar 16 10:18:28 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (modes): New tests modes-7a and modes-7b test behavior
	if one manually changes the modes in the repository.

	* server.c (server): Revise code which checks for errors creating
	temporary directory.  This won't solve the intermittent
	  can't create temporary directory
	  Unknown error -1
	but it will mean (a) the right message based on errno gets
	printed, instead of "unknown error -1", and (b) the message says
	that it happened in chmod instead of mkdir_p.

Sat Mar 15 16:47:12 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>
